--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,53 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@import url('https://fonts.googleapis.com/css2?family=Rancho&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+
+    @keyframes floatArrow {
+    0%, 100% {
+      transform: translateX(0);
+    }
+    50% {
+      transform: translateX(-5px);
+    }
+  }
+
+  @keyframes floatY {
+    0%, 100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-6px); 
+    }
+  }
+
+.rancho-regular {
+  font-family: "Rancho", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.footer-text {
+  font-size: 45px;
+  color: #331a15;
+  text-shadow: 2px 2px 4px #331a15;
+}
+
+p {
+  color: #1b1a1a;
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 20px;
+}
+
+ .floating-arrow {
+    animation: floatArrow 1.5s ease-in-out infinite;
+  }
+  .float-updown {
+    animation: floatY 2s ease-in-out infinite;
+  }
